syntax = "proto3";

package logrpc;
option go_package="./logrpc";

enum Level {
  TRACE = 0;
  DEBUG = 1;
  ERROR = 2;
}

message LogRecord {
  string service = 1;
  Level log_level = 2;
  string message = 3;
  string trace_id = 4;
}
message LogResponse {
  string message_id = 1;
}

message FetchLogRequest {
  // add search parameters for FE
}
message FetchLogResponse {
  repeated LogRecord messages = 1;
}

service LoggingService {
  rpc Log (LogRecord) returns (LogResponse);
  rpc FetchLogs(FetchLogRequest) returns (FetchLogResponse);
}